<resources>
    <string name="app_name">Личный кабинет</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Введите пароль</string>
    <string name="repeat_password">Введите пароль повторно</string>
    <string name="login">Введите ваш логин</string>
    <string name="phone">Введите ваш номер телефона</string>
    <string name="email">Введите ваш e-mail</string>
    <string name="electric_active_energy_units"> кВт•ч</string>
    <string name="transmittal_complete">Передача выполнена успешно</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device">Device</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="well_done">Показания успешно переданы</string>
    <string name="success">Успешно!</string>


    <string name="please_registration">Зарегистрируйтесь по номеру телефона</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="name_surname_enter">Введите свое имя и фамилию</string>
    <string name="archive">Архив показаний</string>
    <string name="diagnostic">Диагностика</string>
    <string name="transmission_of_testimony">Передача показаний</string>
    <string name="information">Информация</string>
    <string name="meters">Приборы учета</string>
    <string name="meter_name">Имя прибора учета</string>
    <string name="serial_number">Серийный номер</string>
    <string name="date">Дата поверки</string>
    <string name="address">Адрес установки</string>
    <string name="sum_readings">Суммарные показания</string>
    <string name="first_tariff">Тариф 1</string>
    <string name="second_tariff">Тариф 2</string>
    <string name="third_tariff">Тариф 3</string>
    <string name="fourth_tariff">Тариф 4</string>
    <string name="give">Передать</string>
    <string name="code">Код</string>
    <string name="error">Ошибка</string>
    <string name="meter_name_1">МИР C-05</string>
    <string name="meters_main">Приборы учета</string>
    <string name="enter_devices_number">Введите серийный номер прибора учета</string>
    <string name="serial_number_2">Серийный номер:</string>
    <string name="indications_by_date">Показания с</string>
    <string name="before">до</string>
    <string name="meters_from">Показания от</string>
    <string name="password_mismatch">Пароли не совпадают.</string>
    <string name="short_password">Пароль слишком короткий.</string>
    <string name="this_login_exist">Пользователь с таким логином уже существует.</string>
    <string name="incorrect_phone_number">Номер телефона введен неправильно.</string>
    <string name="codeText">Код</string>
    <string name="errorText">Ошибка</string>
    <string name="text_00">00</string>
    <string name="diagnostic_success">Диагностика прошла успешно</string>
    <string name="invalid_login_password">Не верный логин или пароль. Повторите попытку</string>
    <string name="add_devices_please">Привяжите приборы учета с помощью кнопки "+"</string>
    <string name="text_0">0</string>


</resources>