<?xml version="1.0" encoding="utf-8"?><!--Разметка для фрагмента входа в систему-->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="me.apps.personal_account_npo_mir.view.login.LogInFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_login_edit_text"
        style="@style/Theme.MIR.EditText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/call_20"
        android:hint="@string/phone"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sign_in_password_edit_text"
        style="@style/Theme.MIR.EditText"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/lock_20"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <!-- <include
        android:id="@+id/sign_in_button"
        layout="@layout/button_loading_layout"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp" /> -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        style="@style/Theme.MIR.Button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/sign_in" />

    
</androidx.appcompat.widget.LinearLayoutCompat>