<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_light_gray">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/infoIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/information_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/informationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:layout_marginTop="20dp"
        android:theme="@style/textStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toEndOf="@id/infoIconImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/white_rectangle_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoIconImageView" />

    <TextView
        android:id="@+id/meterNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:text="@string/meter_name"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/serialNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meterNameTextView"
        android:text="@string/serial_number"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serialNumberTextView"
        android:text="@string/date"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin = "20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateTextView"
        android:text="@string/address"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/devicesNameText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@drawable/information_text_view_rec"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="МИР С-05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/serialNumberText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:background="@drawable/information_text_view_rec"
        android:gravity="center"
        android:text="12345678"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devicesNameText" />


    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:background="@drawable/information_text_view_rec"
        android:gravity="center"
        android:text="14.05.23"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialNumberText" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:background="@drawable/information_text_view_rec"
        android:gravity="center"
        android:text="Герцена 51/58"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />


</androidx.constraintlayout.widget.ConstraintLayout>