<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_light_gray">

    <ImageView
        android:id="@+id/moveIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/arrows_move_swap_switch_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/transmission_of_testimony"
        android:theme="@style/textStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintStart_toEndOf="@id/moveIconImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/white_rectangle_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moveIconImageView" />

    <LinearLayout
        android:id="@+id/transLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/transmittal_rectangle"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backImageView">

        <TextView
            android:id="@+id/meter_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/light_blue"
            android:gravity="center"
            android:textColor="@color/dark"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/sumLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum_readings"
                android:textColor="@color/dark"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/indicationOfSumTextView"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:padding="1dp"
                android:textSize="15sp"
                android:background="@drawable/rec_trans"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electric_active_energy_units"
                android:textColor="@color/dark"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstTariffTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_tariff"
                android:textColor="@color/dark"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/indicationFirstTariffTextView"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:padding="1dp"
                android:textSize="15sp"
                android:background="@drawable/rec_trans"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electric_active_energy_units"
                android:textColor="@color/dark"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/secondTariffTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_tariff"
                android:textColor="@color/dark"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/indicationSecondTextView"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:padding="1dp"
                android:textSize="15sp"
                android:background="@drawable/rec_trans"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electric_active_energy_units"
                android:textColor="@color/dark"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thirdTariffTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_tariff"
                android:textColor="@color/dark"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/indicationThirdTextView"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:padding="1dp"
                android:textSize="15sp"
                android:background="@drawable/rec_trans"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electric_active_energy_units"
                android:textColor="@color/dark"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fourthTariffTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_tariff"
                android:textColor="@color/dark"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/indicationFourthTextView"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:padding="1dp"
                android:textSize="15sp"
                android:background="@drawable/rec_trans"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electric_active_energy_units"
                android:textColor="@color/dark"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/handOverButton"
            style="@style/Theme.MIR.Button"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/give"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>